# docs-gen

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  docs.yml  publish.yml
defaults/: config.toml
defaults/bases/standard/static/js/: main.js
defaults/bases/standard/templates/: base.html  page.html
defaults/pages/en/: index.md
defaults/pages/en/developers-guide/: 01-testing.md  02-architecture.md  index.md
defaults/pages/en/users-guide/: 01-getting-started.md  02-writing-pages.md  03-configuration.md  04-customizing-themes.md  05-checking-your-site.md  06-deploying.md  07-creating-themes.md  index.md
defaults/pages/ja/: index.md
defaults/pages/ja/developers-guide/: 01-testing.md  02-architecture.md  index.md
defaults/pages/ja/users-guide/: 01-getting-started.md  02-writing-pages.md  03-configuration.md  04-customizing-themes.md  05-checking-your-site.md  06-deploying.md  07-creating-themes.md  index.md
defaults/styles/default/: DESIGN.md  config.toml
defaults/styles/default/static/css/: main.css
defaults/styles/monotone/: DESIGN.md  config.toml
defaults/styles/monotone/static/css/: main.css
defaults/themes/default/: config.toml
defaults/themes/default/static/css/: main.css
defaults/themes/default/static/js/: main.js
defaults/themes/default/templates/: base.html
defaults/themes/monotone/: config.toml
defaults/themes/monotone/static/css/: main.css
scripts/: release
src/: builder.rs  check.rs  config.rs  defaults.rs  main.rs  markdown.rs  serve.rs  utils.rs
tests/e2e/: helpers.rs  main.rs
(+1 files in other folders)
