[package]
name = "docs-gen"
version = "0.2.0"
edition = "2021"
description = "A zero-config static site generator for documentation — just write Markdown and deploy"
license = "MIT"
repository = "https://github.com/yhirose/docs-gen"
homepage = "https://yhirose.github.io/docs-gen/"
keywords = ["documentation", "static", "site", "generator", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
pulldown-cmark = "0.12"
tera = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
syntect = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "7"
tiny_http = "0.12"
tungstenite = "0.24"
open = "5"
tempfile = "3"
socket2 = { version = "0.5", features = ["all"] }
include_dir = "0.7"

[dev-dependencies]
thirtyfour = "0.35"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking"] }
